fix(admin): add context endpoint
