# packages/api-contracts/openapi/liuhetong-v1.yaml
@@ -1535,6 +1535,61 @@
   },
   "openapi": "3.1.0",
   "paths": {
+    "/api/v1/admin/context": {
+      "get": {
+        "operationId": "context_api_v1_admin_context_get",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorEnvelope"
+                }
+              }
+            },
+            "description": "Application error"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorEnvelope"
+                }
+              }
+            },
+            "description": "Validation error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorEnvelope"
+                }
+              }
+            },
+            "description": "Internal error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Context",
+        "tags": [
+          "admin"
+        ]
+      }
+    },
     "/api/v1/admin/modules/{module}": {
       "get": {
         "operationId": "module_data_api_v1_admin_modules__module__get",
